--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a id="logo" href="#">JustHire</a>
         <a href="#">About us</a>
         <a href="#">contact us</a>
-        <a href="#"><i class="fas fa-user"></i>Login/Register</a> 
+        <a href="login.html"><i class="fas fa-user"></i>Login/Register</a> 
     </nav>
 
 
