--- a/index.html
+++ b/index.html
@@ -4,43 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <style>
-        body{
-            background: url("1.jpg");
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-            padding: 0%;
-            margin: 0%;
-        }
-        nav{
-            background-color: #000000;
-            height: 150px;
-            margin-right: 53px;
-            margin-top: 53px;
-            margin-left: 53px;
-            display: flex; 
-            align-items: center;
-            justify-content: space-between;
-        }
-        nav a{
-            color: white;
-            text-decoration: none;
-            margin-right: 60px;
-            font-size: 25px;
-        }
-        nav a:hover{
-            color: bisque;
-        }
-        #logo{
-            margin-right:510px;
-            margin-left: 120px;
-            font-size:45px;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
-    </style>
     <nav>
         <a id="logo" href="#">JustHire</a>
         <a href="#">About us</a>
