--- a/login.html
+++ b/login.html
@@ -27,5 +27,6 @@
         </div>
         <button class="button3">Forgot Password</button>
     </form>
+<script src="login.js"></script>
 </body>
 </html>
