--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <a href="login.html"><i class="fas fa-user"></i>Login/Register</a> 
     </nav>
 
+      <script src="index.js"></script>
+
 
 </body>
 </html>
