--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
         <a href="#">contact us</a>
         <a href="login.html"><i class="fas fa-user"></i>Login/Register</a> 
     </nav>
+    <div class="man"><h1>HOW IT WORK'S</h1></div>
+    <div class="container">
+        <div class="step">
+            <div class="step-number">1</div>
+            <img src="https://cdn-icons-png.flaticon.com/128/2989/2989993.png" alt="Upload">
+            <a href="resume.html"><h3>Upload Your Resume</h3></a>
+            <p>Simply drag and drop your resume file (PDF or DOCX) to start.</p>
+        </div>
+        <div class="step">
+            <div class="step-number">2</div>
+            <img src="https://cdn-icons-png.flaticon.com/128/1828/1828640.png" alt="Job Description">
+            <a href="#"><h3>Add the Job Description (JD)</h3></a>
+            <p>Paste or upload the job description to let our AI match your skills.</p>
+        </div>
+        <div class="step">
+            <div class="step-number">3</div>
+            <img src="https://cdn-icons-png.flaticon.com/128/1055/1055183.png" alt="Check Score">
+            <a href="#"><h3>Check Your Score</h3></a>
+            <p>Instantly get a resume score for free and actionable feedback.</p>
+        </div>
+    </div>
 
       <script src="index.js"></script>
 
