--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a id="logo" href="#">JustHire</a>
+        <a id="logo" href="#" ><img src="2.png" height="60px" width="60px">&nbsp;JustHire</a>
         <a href="#">About us</a>
         <a href="#">contact us</a>
         <a href="login.html"><i class="fas fa-user"></i>Login/Register</a> 
