--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <nav>
         <a id="logo" href="#" ><img src="2.png" height="60px" width="60px">&nbsp;JustHire</a>
-        <a href="#">About us</a>
+        <a href="#about-section">About us</a>
         <a href="#">contact us</a>
         <a href="login.html"><i class="fas fa-user"></i>Login/Register</a> 
     </nav>
     <div class="man"><h1>HOW IT WORK'S</h1></div>
-    <div class="container">
+    <div class="steps-container">
         <div class="step">
             <div class="step-number">1</div>
             <img src="https://cdn-icons-png.flaticon.com/128/2989/2989993.png" alt="Upload">
@@ -34,6 +34,83 @@
             <p>Instantly get a resume score for free and actionable feedback.</p>
         </div>
     </div>
+    <footer class="footer-about">
+        <div class="container" id="about-section">
+            <div class="about-grid">
+                <div class="about-content">
+                    <h2>About Us</h2>
+                    <p>
+                        We are passionate about delivering exceptional value to our customers through 
+                        innovative solutions and unwavering commitment to quality. With years of 
+                        industry experience, our team of experts works tirelessly to exceed 
+                        expectations and create lasting relationships with our clients.
+                    </p>
+                    <div class="button-group">
+                        <button class="btn btn-primary">Contact Us</button>
+                        <button class="btn btn-secondary">Learn More</button>
+                    </div>
+                </div>
+
+                <div class="stats-grid">
+                    <div class="stat-item">
+                        <p class="stat-number">10+</p>
+                        <p class="stat-label">Years of Experience</p>
+                    </div>
+                    <div class="stat-item">
+                        <p class="stat-number">500+</p>
+                        <p class="stat-label">Happy Clients</p>
+                    </div>
+                    <div class="stat-item">
+                        <p class="stat-number">50+</p>
+                        <p class="stat-label">Team Members</p>
+                    </div>
+                    <div class="stat-item">
+                        <p class="stat-number">100%</p>
+                        <p class="stat-label">Client Satisfaction</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="additional-info">
+                <div class="info-section">
+                    <h3>Our Location</h3>
+                    <p>
+                        123 Business Street<br>
+                        Indore(M.P.), CA 94025<br>
+                        India
+                    </p>
+                </div>
+                <div class="info-section">
+                    <h3>Contact Info</h3>
+                    <p>
+                        Email: info@company.com<br>
+                        Phone: (+91) 90090 71760<br>
+                        Hours: Mon-Fri 9AM-6PM IST
+                    </p>
+                </div>
+                <div class="info-section">
+                    <h3>Follow Us</h3>
+                    <div class="social-links">
+                        <a href="#" class="social-link">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="#2563eb">
+                                <rect width="24" height="24" rx="12"/>
+                            </svg>
+                        </a>
+                        <a href="#" class="social-link">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="#2563eb">
+                                <rect width="24" height="24" rx="12"/>
+                            </svg>
+                        </a>
+                        <a href="#" class="social-link">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="#2563eb">
+                                <rect width="24" height="24" rx="12"/>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
       <script src="index.js"></script>
 
