--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <a id="logo" href="#" ><img src="2.png" height="60px" width="60px">&nbsp;JustHire</a>
         <a href="#about-section">About us</a>
-        <a href="#">contact us</a>
+        <a href="contact.html" onclick="openModal(event)">Contact Us</a>
         <a href="login.html"><i class="fas fa-user"></i>Login/Register</a> 
     </nav>
     <div class="man"><h1>HOW IT WORK'S</h1></div>
@@ -34,6 +34,43 @@
             <p>Instantly get a resume score for free and actionable feedback.</p>
         </div>
     </div>
+<!-- Add this just before the closing body tag -->
+<div id="contactModal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn" onclick="closeModal()">&times;</span>
+        
+        <form id="contactForm" class="contact-form" onsubmit="handleSubmit(event)">
+            <h2 class="form-title">Contact Us</h2>
+            
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+
+            <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phone" required>
+            </div>
+
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+            </div>
+
+            <button type="submit" class="submit-btn">Send Message</button>
+        </form>
+
+        <div class="success-message">
+            Thank you for your message! We'll get back to you soon.
+        </div>
+    </div>
+</div>
+
     <footer class="footer-about">
         <div class="container" id="about-section">
             <div class="about-grid">
